plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.23.8'
}

group 'bg.xo'
version '1.0'
sourceCompatibility = 11

application {
    mainClass.set("bg.xo.MainApp")
    mainModule.set("MainModule")
}

javafx {
    version = "11.0.2"
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.swing']
}

run {
    jvmArgs = [
            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--illegal-access=warn",
            "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=com.jfoenix"
    ]
}


jlink {
    launcher {
        name = 'xo'
        noConsole = true
        jvmArgs = [
                "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
                "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
                "--illegal-access=warn",
                "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                "--add-opens=java.base/java.lang.reflect=com.jfoenix"
        ]
    }
    targetPlatform("win32") {
        jdkHome = "F:/cross-platform-deploy/win32/OpenJDK11U-jdk_x86-32_windows_hotspot_11.0.11_9/jdk-11.0.11+9"
        addExtraModulePath("F:/cross-platform-deploy/win32/openjfx-16_windows-x86_bin-jmods/javafx-jmods-16")
        addOptions('--compress', '2', '--no-header-files', '--no-man-pages')
    }
    targetPlatform("win64") {
        addOptions('--compress', '2', '--no-header-files', '--no-man-pages')
    }

    targetPlatform("linux-s390x") {
        jdkHome = "F:/cross-platform-deploy/linux-s390x/OpenJDK11U-jdk_s390x_linux_hotspot_11.0.11_9/jdk-11.0.11+9"
        addExtraModulePath("F:/cross-platform-deploy/linux-s390x/openjfx-17-ea+9_linux-x64_bin-jmods/javafx-jmods-17")
        addOptions('--compress', '2', '--no-header-files', '--no-man-pages')
    }

    targetPlatform("mac") {
        jdkHome = "F:/cross-platform-deploy/mac/OpenJDK11U-jdk_x64_mac_hotspot_11.0.11_9/jdk-11.0.11+9/Contents/Home"
        addExtraModulePath("F:/cross-platform-deploy/mac/openjfx-17-ea+9_osx-x64_bin-jmods/javafx-jmods-17")
        addOptions('--compress', '2', '--no-header-files', '--no-man-pages')
    }

}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    compile 'com.jfoenix:jfoenix:9.0.10'
    compile 'org.controlsfx:controlsfx:11.0.0'
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}